Did first task of MongoDB part

--- a/part2/puhelinluettelo/package.json
+++ b/part2/puhelinluettelo/package.json
@@ -18,6 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -38,5 +39,7 @@
   },
   "devDependencies": {
     "json-server": "^0.16.3"
-  }
+  },
+  "proxy": "http://localhost:3002"
+
 }
