--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Erno Kärhä",
@@ -13,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.19",
-    "next": "^10.0.8"
+    "next": "^10.0.8",
+    "nodemon": "^2.0.7"
   }
 }
