--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -16,11 +16,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
-    "mongoose": "^5.11.19",
+    "mongoose": "^5.12.0",
     "next": "^10.0.8"
   },
   "devDependencies": {
-    "eslint": "^7.21.0",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.22.0",
+    "lodash": "^4.17.21"
   }
 }
