--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jest": "^26.6.3",
     "mongoose": "^5.12.0",
     "next": "^10.0.8"
@@ -22,6 +23,8 @@
   "devDependencies": {
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.22.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
