--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "jest --verbose",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "Erno Kärhä",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "bcrypt": "^5.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.22.0",
     "jsonwebtoken": "^8.5.1",
