--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -2,13 +2,13 @@
   "name": "blogilista",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app.js",
-    "dev": "cross-env NODE_ENV=development nodemon app.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "start:test": "cross-env NODE_ENV=test node app.js"
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "Erno Kärhä",
   "license": "MIT",
