--- a/part7/bloglist-frontend/package.json
+++ b/part7/bloglist-frontend/package.json
@@ -7,7 +7,11 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.1",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -15,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint . --fix",
+    "eslint": "eslint .",
     "cypress:open": "cypress open",
     "start:test": "cross-env NODE_ENV=test node index.js"
   },
