--- a/part7/bloglist-frontend/package.json
+++ b/part7/bloglist-frontend/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint .",
+    "eslint": "eslint . --fix",
     "cypress:open": "cypress open",
     "start:test": "cross-env NODE_ENV=test node index.js"
   },
