--- a/part2/puhelinluettelo/package.json
+++ b/part2/puhelinluettelo/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -16,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server db.json --routes routes.json -p3001"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +41,5 @@
   "devDependencies": {
     "json-server": "^0.16.3"
   },
-  "proxy": "http://localhost:3002"
+  "proxy": "http://localhost:3001"
 }
