--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint .",
+    "eslint": "eslint . --fix",
     "cypress:open": "cypress open",
     "start:test": "cross-env NODE_ENV=test node index.js"
   },
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3005",
+  "proxy": "http://localhost:6002",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
