--- a/part9/Patientor-backend/package.json
+++ b/part9/Patientor-backend/package.json
@@ -12,8 +12,10 @@
   "author": "Erno Kärhä",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
