--- a/part9/patientor/package.json
+++ b/part9/patientor/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "react": "^17.0.1",
@@ -20,7 +23,6 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
-    "chokidar": "^3.5.2",
     "eslint-config-react": "^1.1.7",
     "react-scripts": "^4.0.3",
     "typescript": "^4.2.2"
@@ -33,6 +35,7 @@
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
   },
+  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
